--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @import "tailwindcss";
+@theme {
+  --font-heading: "Poppins", "sans-serif";
+  --font-body: "Inter", "sans-serif";
+  --color-primary: #0f172a;
+  --color-secondary: #f1f5f9;
+  --color-accent: #38bdf8;
+  --color-accent-light: #94a3b8;
+}
